@@ -106,6 +106,18 @@
 										<numIndex index="0">LLL:EXT:ics_od_datastore/locallang_flexform_pi1.xml:sortName_title</numIndex>
 										<numIndex index="1">title</numIndex>
 									</numIndex>
+									<numIndex index="4"  type="array">
+										<numIndex index="0">LLL:EXT:ics_od_datastore/locallang_flexform_pi1.xml:sortName_update_date</numIndex>
+										<numIndex index="1">update_date</numIndex>
+									</numIndex>
+									<numIndex index="5"  type="array">
+										<numIndex index="0">LLL:EXT:ics_od_datastore/locallang_flexform_pi1.xml:sortName_crdate</numIndex>
+										<numIndex index="1">crdate</numIndex>
+									</numIndex>
+									<numIndex index="6"  type="array">
+										<numIndex index="0">LLL:EXT:ics_od_datastore/locallang_flexform_pi1.xml:sortName_stat_dl</numIndex>
+										<numIndex index="1">stat_dl</numIndex>
+									</numIndex>
 								</items>
 								<size>1</size>
 								<minitems>0</minitems>
